--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Pact Awakening</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- <script type="text/javascript" src="http://livejs.com/live.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 </head>
-<body>
-    <script src="scripts/app.js"></script>
 
+<body>
+  <header>
+    <div class="wrap">
+      <svg class="magic-circle"></svg>
+    </div>
+      <svg class="stars"></svg>
+      <script src="scripts/app.js"></script>
+  </header>
 </body>
+
 </html>
