--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pact Awakening</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <!-- <script type="text/javascript" src="http://livejs.com/live.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
-  </head>
 
-  <body>
-    <header>
-      <div class="wrap">
-        <svg class="magic-circle"></svg>
-      </div>
-      <svg class="stars"></svg>
-      <script type="module" src="scripts/app.js"></script>
-    </header>
-  </body>
+<head>
+  <title>Pact Awakening</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <!-- <script type="text/javascript" src="http://livejs.com/live.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script> -->
+  <!-- <script type="module" src="./svg.js"></script> -->
+</head>
+
+<body>
+  <header>
+    <div class="wrap">
+      <svg class="magic-circle"></svg>
+    </div>
+    <svg class="stars"></svg>
+    <script type="module" src="index.js"></script>
+  </header>
+</body>
+
 </html>
