do some text formatting

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Pact Awakening</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css" />
   <!-- <script type="text/javascript" src="http://livejs.com/live.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script> -->
@@ -12,11 +14,81 @@
 <body>
   <header>
     <div class="wrap">
+      <svg class="stars" viewBox="0 0 1920 1080" preserveAspectRatio="xMinYMin slice"></svg>
+    </div>
+    <div class="wrap">
       <svg class="magic-circle"></svg>
     </div>
-    <svg class="stars"></svg>
     <script type="module" src="index.js"></script>
   </header>
+  <div class="bottom-div text-white">
+    <p2> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna
+      aliqua. Id diam maecenas ultricies mi eget mauris pharetra. Vestibulum sed arcu non odio euismod lacinia at. Sem
+      nulla pharetra diam sit amet nisl suscipit. A diam sollicitudin tempor id eu nisl. Id volutpat lacus laoreet non.
+      Consequat id porta nibh venenatis. Semper eget duis at tellus at urna condimentum. Nulla aliquet enim tortor at
+      auctor. Adipiscing at in tellus integer feugiat. Enim blandit volutpat maecenas volutpat blandit aliquam etiam.
+      Dui
+      nunc mattis enim ut tellus. Nibh nisl condimentum id venenatis a condimentum vitae sapien. Sit amet nulla facilisi
+      morbi tempus iaculis urna. Quam vulputate dignissim suspendisse in est ante. At augue eget arcu dictum varius. Eu
+      mi
+      bibendum neque egestas congue quisque. Sed tempus urna et pharetra pharetra massa.
+      </p>
+      <p> Amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus. Nunc non blandit massa enim nec dui nunc
+        mattis
+        enim. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Euismod nisi porta lorem mollis aliquam.
+        Egestas maecenas pharetra convallis posuere morbi leo urna molestie at. Adipiscing vitae proin sagittis nisl
+        rhoncus
+        mattis rhoncus urna neque. Est ultricies integer quis auctor elit sed vulputate. Eget magna fermentum iaculis
+        eu.
+        Mattis enim ut tellus elementum. Aliquam ut porttitor leo a diam sollicitudin tempor id. Fames ac turpis egestas
+        maecenas pharetra convallis. In arcu cursus euismod quis viverra nibh cras. Orci phasellus egestas tellus
+        rutrum.
+        Rhoncus dolor purus non enim praesent elementum facilisis leo vel. At ultrices mi tempus imperdiet nulla
+        malesuada.
+        Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Nulla facilisi cras fermentum odio eu
+        feugiat
+        pretium nibh ipsum.
+      </p>
+
+      <p>Venenatis tellus in metus vulputate eu scelerisque felis. Aliquet lectus proin nibh nisl condimentum. Ornare
+        suspendisse sed nisi lacus sed viverra tellus in hac. Amet justo donec enim diam vulputate. Habitant morbi
+        tristique
+        senectus et netus et. Pulvinar elementum integer enim neque. Tincidunt lobortis feugiat vivamus at augue eget
+        arcu.
+        Interdum velit laoreet id donec. Facilisis gravida neque convallis a cras semper. At quis risus sed vulputate
+        odio
+        ut. Sit amet cursus sit amet dictum sit.</p>
+      <p>
+        Rhoncus dolor purus non enim praesent elementum facilisis leo vel. In arcu cursus euismod quis. In massa tempor
+        nec
+        feugiat nisl pretium. Aliquam ut porttitor leo a diam sollicitudin. Purus viverra accumsan in nisl nisi
+        scelerisque
+        eu ultrices. Morbi tempus iaculis urna id volutpat lacus laoreet non. Malesuada pellentesque elit eget gravida
+        cum.
+        Lectus urna duis convallis convallis tellus id interdum velit. Fusce id velit ut tortor pretium viverra
+        suspendisse
+        potenti. Habitant morbi tristique senectus et netus et. Dolor purus non enim praesent elementum facilisis leo.
+        Nibh
+        tellus molestie nunc non blandit massa enim nec dui. Mi sit amet mauris commodo quis imperdiet massa tincidunt.
+        Turpis cursus in hac habitasse platea dictumst quisque.
+      </p>
+      <p>
+        Arcu risus quis varius quam quisque. In aliquam sem fringilla ut morbi tincidunt. Scelerisque felis imperdiet
+        proin
+        fermentum leo vel orci porta. Turpis in eu mi bibendum neque egestas congue quisque egestas. Sodales ut etiam
+        sit
+        amet nisl purus. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Varius duis at
+        consectetur lorem donec massa sapien faucibus. Suspendisse sed nisi lacus sed viverra tellus in hac habitasse.
+        Elit
+        ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Nunc sed blandit libero volutpat sed
+        cras
+        ornare arcu. Nunc consequat interdum varius sit. Condimentum mattis pellentesque id nibh tortor. Morbi tempus
+        iaculis urna id volutpat lacus laoreet. Sit amet risus nullam eget felis. Sed enim ut sem viverra. In hac
+        habitasse
+        platea dictumst. Sit amet risus nullam eget. Donec et odio pellentesque diam volutpat.
+      </p>
+  </div>
 </body>
 
 </html>
