ready to upload test

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
   <!-- <script type="text/javascript" src="http://livejs.com/live.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
   <!-- <script type="module" src="./svg.js"></script> -->
 </head>
 
 <body>
   <header>
     <svg class="stars" viewBox="0 0 1920 1080" preserveAspectRatio="xMinYMin slice"></svg>
-    <div class="d-flex flex-wrap w-100">
-      <div class="col-4"></div>
+    <div class="d-flex flex-row flex-wrap w-100" style="max-width: 100%; position: relative;">
 
-      <svg class="magic-circle info-wrap"> </svg>
+      <div class="col-xl-3"></div>
+      <svg class="magic-circle" viewBox="0 0 830 830"> </svg>
       <div class="d-flex flex-wrap flex-column h-100 popup-card">
         <div class="card bg-transparent text-white border-white popup-card">
           <span class="card-header bg-transparent info-wrap">
-            <svg class="info" alt=" Card image cap"></svg>
+            <svg class="info" viewBox="0 0 250 250" alt=" Card image cap"></svg>
           </span>
           <!-- <hr class="chapter-divider"> -->
           <div class="card-body ">
