--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <svg class="stars" viewBox="0 0 1920 1080" preserveAspectRatio="xMinYMin slice"></svg>
+    <svg class="stars" id="stars" preserveAspectRatio="xMinYMin slice"></svg>
     <div class="d-flex flex-row flex-wrap w-100" style="max-width: 100%; position: relative;">
 
       <div class="col-xl-3"></div>
