mobile font sizes

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
   </header>
 
   <div class="bottom-div text-white d-flex flex-wrap w-100">
-    <div class="col-sm-3"></div>
-    <p2 class="col-md-6"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    <div class="col-sm-3 desktop-buffer"></div>
+    <p2 class="col-lg-6 col-12  flex-grow"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor
+      incididunt
+      ut
       labore et dolore
       magna
       aliqua. Id diam maecenas ultricies mi eget mauris pharetra. Vestibulum sed arcu non odio euismod lacinia at. Sem
@@ -111,7 +114,7 @@
         habitasse
         platea dictumst. Sit amet risus nullam eget. Donec et odio pellentesque diam volutpat.
       </p>
-      <div class="col-3"></div>
+      <div class="col-sm-3 desktop-buffer"></div>
 
   </div>
 </body>
