--- a/index.html
+++ b/index.html
@@ -14,109 +14,123 @@
 </head>
 
 <body>
-  <header>
-    <svg class="stars" id="stars" preserveAspectRatio="xMinYMin slice"></svg>
-    <div class="d-flex flex-row flex-wrap w-100" style="max-width: 100%; position: relative;">
+  <nav class="navbar navbar-expand navbar-dark navbar-inverse bg-transparent">
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> -->
+    <!-- </button> -->
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+    <button class="bg-transparent btn btn-outline-secondary" id="menu-toggle">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="col-xl-3"></div>
-      <svg class="magic-circle" viewBox="0 0 830 830"> </svg>
-      <div class="d-flex flex-wrap flex-column h-100 popup-card">
-        <div class="card bg-transparent text-white border-white popup-card">
-          <span class="card-header bg-transparent info-wrap">
-            <svg class="info" viewBox="0 0 250 250" alt=" Card image cap"></svg>
-          </span>
-          <!-- <hr class="chapter-divider"> -->
-          <div class="card-body ">
-            <h5 class="card-title" id="cardSymbolName"></h5>
-            <p2 class="card-text" id="cardSymbolDescription">Click a sigil for more
-              info</p2>
-            <br> <br>
-            <hr class="chapter-divider">
-            <br>
+    <a class="navbar-brand" href="#">Navbar</a>
 
-            <i class="card-text" id="cardSymbolQuote" style="overflow-wrap: break-word;">Click a sigil for more</i>
-          </div>
+    <div class="collapse navbar-collapse " id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+
+
+  <div class="d-flex" id="wrapper">
+
+    <!-- Sidebar -->
+    <div class="bg-transparent border-right navbar-dark" id="sidebar-wrapper">
+      <div class="sidebar-content text-white">
+        <div class="sidebar-heading navbar-brand">Start Bootstrap </div>
+        <hr class="chapter-divider">
+        <div class="list-group list-group-flush navbar-nav">
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Dashboard<br></a>
+          <a class="list-group-item bg-transparent">
+            <hr class="chapter-divider"></a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Shortcuts</a>
+          <a class="list-group-item bg-transparent">
+            <hr class="chapter-divider"></a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Overview</a>
+          <a class="list-group-item bg-transparent">
+            <hr class="chapter-divider"></a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Events</a>
+          <a class="list-group-item bg-transparent">
+            <hr class="chapter-divider"></a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Profile</a>
+          <a class="list-group-item bg-transparent">
+            <hr class="chapter-divider"></a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Status</a>
         </div>
       </div>
     </div>
-    <script type="module" src="index.js"></script>
-  </header>
 
-  <div class="bottom-div text-white d-flex flex-wrap w-100">
-    <div class="col-sm-3 desktop-buffer"></div>
-    <p2 class="col-lg-6 col-12  flex-grow"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor
-      incididunt
-      ut
-      labore et dolore
-      magna
-      aliqua. Id diam maecenas ultricies mi eget mauris pharetra. Vestibulum sed arcu non odio euismod lacinia at. Sem
-      nulla pharetra diam sit amet nisl suscipit. A diam sollicitudin tempor id eu nisl. Id volutpat lacus laoreet non.
-      Consequat id porta nibh venenatis. Semper eget duis at tellus at urna condimentum. Nulla aliquet enim tortor at
-      auctor. Adipiscing at in tellus integer feugiat. Enim blandit volutpat maecenas volutpat blandit aliquam etiam.
-      Dui
-      nunc mattis enim ut tellus. Nibh nisl condimentum id venenatis a condimentum vitae sapien. Sit amet nulla facilisi
-      morbi tempus iaculis urna. Quam vulputate dignissim suspendisse in est ante. At augue eget arcu dictum varius. Eu
-      mi
-      bibendum neque egestas congue quisque. Sed tempus urna et pharetra pharetra massa.
-      </p>
-      <p> Amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus. Nunc non blandit massa enim nec dui nunc
-        mattis
-        enim. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Euismod nisi porta lorem mollis aliquam.
-        Egestas maecenas pharetra convallis posuere morbi leo urna molestie at. Adipiscing vitae proin sagittis nisl
-        rhoncus
-        mattis rhoncus urna neque. Est ultricies integer quis auctor elit sed vulputate. Eget magna fermentum iaculis
-        eu.
-        Mattis enim ut tellus elementum. Aliquam ut porttitor leo a diam sollicitudin tempor id. Fames ac turpis egestas
-        maecenas pharetra convallis. In arcu cursus euismod quis viverra nibh cras. Orci phasellus egestas tellus
-        rutrum.
-        Rhoncus dolor purus non enim praesent elementum facilisis leo vel. At ultrices mi tempus imperdiet nulla
-        malesuada.
-        Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Nulla facilisi cras fermentum odio eu
-        feugiat
-        pretium nibh ipsum.
-      </p>
+    <!-- Content Wrap -->
+    <div id="page-content-wrapper">
+      <header>
+        <svg class="stars" id="stars" preserveAspectRatio="xMinYMin slice"></svg>
+        <div class="d-flex flex-row flex-wrap w-100" style="max-width: 100%; position: relative;">
 
-      <p>Venenatis tellus in metus vulputate eu scelerisque felis. Aliquet lectus proin nibh nisl condimentum. Ornare
-        suspendisse sed nisi lacus sed viverra tellus in hac. Amet justo donec enim diam vulputate. Habitant morbi
-        tristique
-        senectus et netus et. Pulvinar elementum integer enim neque. Tincidunt lobortis feugiat vivamus at augue eget
-        arcu.
-        Interdum velit laoreet id donec. Facilisis gravida neque convallis a cras semper. At quis risus sed vulputate
-        odio
-        ut. Sit amet cursus sit amet dictum sit.</p>
-      <p>
-        Rhoncus dolor purus non enim praesent elementum facilisis leo vel. In arcu cursus euismod quis. In massa tempor
-        nec
-        feugiat nisl pretium. Aliquam ut porttitor leo a diam sollicitudin. Purus viverra accumsan in nisl nisi
-        scelerisque
-        eu ultrices. Morbi tempus iaculis urna id volutpat lacus laoreet non. Malesuada pellentesque elit eget gravida
-        cum.
-        Lectus urna duis convallis convallis tellus id interdum velit. Fusce id velit ut tortor pretium viverra
-        suspendisse
-        potenti. Habitant morbi tristique senectus et netus et. Dolor purus non enim praesent elementum facilisis leo.
-        Nibh
-        tellus molestie nunc non blandit massa enim nec dui. Mi sit amet mauris commodo quis imperdiet massa tincidunt.
-        Turpis cursus in hac habitasse platea dictumst quisque.
-      </p>
-      <p>
-        Arcu risus quis varius quam quisque. In aliquam sem fringilla ut morbi tincidunt. Scelerisque felis imperdiet
-        proin
-        fermentum leo vel orci porta. Turpis in eu mi bibendum neque egestas congue quisque egestas. Sodales ut etiam
-        sit
-        amet nisl purus. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Varius duis at
-        consectetur lorem donec massa sapien faucibus. Suspendisse sed nisi lacus sed viverra tellus in hac habitasse.
-        Elit
-        ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Nunc sed blandit libero volutpat sed
-        cras
-        ornare arcu. Nunc consequat interdum varius sit. Condimentum mattis pellentesque id nibh tortor. Morbi tempus
-        iaculis urna id volutpat lacus laoreet. Sit amet risus nullam eget felis. Sed enim ut sem viverra. In hac
-        habitasse
-        platea dictumst. Sit amet risus nullam eget. Donec et odio pellentesque diam volutpat.
-      </p>
-      <div class="col-sm-3 desktop-buffer"></div>
+          <!-- <div class="col-xl-3"></div> -->
+          <svg class="magic-circle" viewBox="0 0 830 830"> </svg>
+          <div class="d-flex flex-wrap flex-column h-100 popup-card">
+            <div class="card bg-transparent text-white border-white popup-card">
+              <span class="card-header bg-transparent info-wrap">
+                <svg class="info" viewBox="0 0 250 250" alt=" Card image cap"></svg>
+              </span>
+              <!-- <hr class="chapter-divider"> -->
+              <div class="card-body ">
+                <h5 class="card-title" id="cardSymbolName"></h5>
+                <p2 class="card-text" id="cardSymbolDescription">Click a sigil for more
+                  info</p2>
+                <br> <br>
+                <hr class="chapter-divider">
+                <br>
 
+                <p2><i class="card-text" id="cardSymbolQuote" style="overflow-wrap: break-word;">Click a sigil for
+                    more</i></p2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <div class="bottom-div text-white d-flex flex-wrap w-100">
+        <div class="col-sm-3 desktop-buffer"></div>
+        <p2 class="col-lg-6 col-12  flex-grow">
+          ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore
+          magna aliqua. Id diam maecenas ultricies mi eget mauris pharetra. Vestibulum sed arcu non odio euismod
+          lacinia at. Sem nulla pharetra diam sit amet nisl suscipit. A diam sollicitudin tempor id eu nisl. Id
+          volutpat lacus laoreet non. Consequat id porta nibh venenatis. Semper eget duis at tellus at urna
+          condimentum. Nulla aliquet enim tortor at auctor. Adipiscing at in tellus integer feugiat. Enim blandit
+          volutpat maecenas volutpat blandit aliquam etiam. Dui nunc mattis enim ut tellus. Nibh nisl condimentum id
+          venenatis a condimentum vitae sapien. Sit amet nulla facilisi morbi tempus iaculis urna. Quam vulputate
+          dignissim suspendisse in est ante. At augue eget arcu dictum varius. Eu mi bibendum neque egestas congue
+          quisque. Sed tempus urna et pharetra pharetra massa.
+        </p2>
+        <div class="col-sm-3 desktop-buffer"></div>
+      </div>
+    </div>
   </div>
+  <script type="module" src="index.js"></script>
+  <script>
+    $("#menu-toggle").click(function (e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
+  </script>
 </body>
 
 </html>
