refactor main creation loop and add part of alligner

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Essentials</a>
 
     <div class="collapse navbar-collapse " id="navbarNav">
       <ul class="navbar-nav">
@@ -34,13 +34,19 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Awakening</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link disabled" href="#">Famliar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link disabled" href="#">Implement</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Demesne</a>
         </li>
       </ul>
     </div>
@@ -53,25 +59,40 @@
     <!-- Sidebar -->
     <div class="bg-transparent border-right navbar-dark" id="sidebar-wrapper">
       <div class="sidebar-content text-white">
-        <div class="sidebar-heading navbar-brand">Start Bootstrap </div>
+        <div class="sidebar-heading navbar-brand">Awakening</div>
         <hr class="chapter-divider">
         <div class="list-group list-group-flush navbar-nav">
-          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Dashboard<br></a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link active">Kennet, ON</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">Miss</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">John</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">Maricica</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">Goblins</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">Toadswallow</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">The Giant</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">Filthy Hair Girl</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">Edith</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">Matthew</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link"
+            style="text-indent:1em;">Hungry Choir</a>
+
+
           <a class="list-group-item bg-transparent">
             <hr class="chapter-divider"></a>
-          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Shortcuts</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Jacob's Bell, ON</a>
           <a class="list-group-item bg-transparent">
             <hr class="chapter-divider"></a>
-          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Overview</a>
+          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Montreal, QC</a>
           <a class="list-group-item bg-transparent">
             <hr class="chapter-divider"></a>
-          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Events</a>
-          <a class="list-group-item bg-transparent">
-            <hr class="chapter-divider"></a>
-          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Profile</a>
-          <a class="list-group-item bg-transparent">
-            <hr class="chapter-divider"></a>
-          <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link">Status</a>
         </div>
       </div>
     </div>
