--- a/awakening.html
+++ b/awakening.html
@@ -31,12 +31,12 @@
     <div class="collapse navbar-collapse " id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="awakening.html">Awakening</a>
         </li>
         <li class="nav-item">
@@ -106,47 +106,49 @@
     <div id="page-content-wrapper">
       <header>
         <svg class="stars" id="stars" preserveAspectRatio="xMinYMin slice"></svg>
+        <div class="d-flex flex-row flex-wrap w-100" style="max-width: 100%; position: relative;">
 
-        <!-- <div class="col-xl-3"></div> -->
-        <div class="d-flex flex-wrap flex-column h-100 popup-card">
-          <div class="card bg-transparent text-white border-white popup-card">
-            <span class="card-header bg-transparent info-wrap">
-              <svg class="info" viewBox="0 0 250 250" alt=" Card image cap"></svg>
-            </span>
-            <!-- <hr class="chapter-divider"> -->
-            <div class="card-body ">
-              <h5 class="card-title" id="cardSymbolName"></h5>
-              <p2 class="card-text" id="cardSymbolDescription">Click a sigil for more
-                info</p2>
-              <br> <br>
-              <hr class="chapter-divider">
-              <br>
+          <!-- <div class="col-xl-3"></div> -->
+          <svg class="magic-circle" viewBox="0 0 830 830"> </svg>
+          <div class="d-flex flex-wrap flex-column h-100 popup-card">
+            <div class="card bg-transparent text-white border-white popup-card">
+              <span class="card-header bg-transparent info-wrap">
+                <svg class="info" viewBox="0 0 250 250" alt=" Card image cap"></svg>
+              </span>
+              <!-- <hr class="chapter-divider"> -->
+              <div class="card-body ">
+                <h5 class="card-title" id="cardSymbolName"></h5>
+                <p2 class="card-text" id="cardSymbolDescription">Click a sigil for more
+                  info</p2>
+                <br> <br>
+                <hr class="chapter-divider">
+                <br>
 
-              <p2><i class="card-text" id="cardSymbolQuote" style="overflow-wrap: break-word;">Click a sigil for
-                  more</i></p2>
+                <p2><i class="card-text" id="cardSymbolQuote" style="overflow-wrap: break-word;">Click a sigil for
+                    more</i></p2>
+              </div>
             </div>
           </div>
         </div>
-    </div>
-    </header>
+      </header>
 
-    <div class="bottom-div text-white d-flex flex-wrap w-100">
-      <div class="col-sm-3 desktop-buffer"></div>
-      <p2 class="col-lg-6 col-12  flex-grow">
-        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore
-        magna aliqua. Id diam maecenas ultricies mi eget mauris pharetra. Vestibulum sed arcu non odio euismod
-        lacinia at. Sem nulla pharetra diam sit amet nisl suscipit. A diam sollicitudin tempor id eu nisl. Id
-        volutpat lacus laoreet non. Consequat id porta nibh venenatis. Semper eget duis at tellus at urna
-        condimentum. Nulla aliquet enim tortor at auctor. Adipiscing at in tellus integer feugiat. Enim blandit
-        volutpat maecenas volutpat blandit aliquam etiam. Dui nunc mattis enim ut tellus. Nibh nisl condimentum id
-        venenatis a condimentum vitae sapien. Sit amet nulla facilisi morbi tempus iaculis urna. Quam vulputate
-        dignissim suspendisse in est ante. At augue eget arcu dictum varius. Eu mi bibendum neque egestas congue
-        quisque. Sed tempus urna et pharetra pharetra massa.
-      </p2>
-      <div class="col-sm-3 desktop-buffer"></div>
+      <div class="bottom-div text-white d-flex flex-wrap w-100">
+        <div class="col-sm-3 desktop-buffer"></div>
+        <p2 class="col-lg-6 col-12  flex-grow">
+          ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore
+          magna aliqua. Id diam maecenas ultricies mi eget mauris pharetra. Vestibulum sed arcu non odio euismod
+          lacinia at. Sem nulla pharetra diam sit amet nisl suscipit. A diam sollicitudin tempor id eu nisl. Id
+          volutpat lacus laoreet non. Consequat id porta nibh venenatis. Semper eget duis at tellus at urna
+          condimentum. Nulla aliquet enim tortor at auctor. Adipiscing at in tellus integer feugiat. Enim blandit
+          volutpat maecenas volutpat blandit aliquam etiam. Dui nunc mattis enim ut tellus. Nibh nisl condimentum id
+          venenatis a condimentum vitae sapien. Sit amet nulla facilisi morbi tempus iaculis urna. Quam vulputate
+          dignissim suspendisse in est ante. At augue eget arcu dictum varius. Eu mi bibendum neque egestas congue
+          quisque. Sed tempus urna et pharetra pharetra massa.
+        </p2>
+        <div class="col-sm-3 desktop-buffer"></div>
+      </div>
     </div>
-  </div>
   </div>
   <script type="module" src="index.js"></script>
   <script>
